--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: gerenciando máquinas virtuais</li>
         <li>Curso Docker: criando containers sem dor de cabeça</li>
         <li>Ansible: sua infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no 
